--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StateCircleAnimation</string>
+    <string name="title_activity_compose_main">Compose State Circle</string>
 </resources>
